# P1-project

./: .gitignore  CMakeLists.txt  Notes_and_todo.md  README.md  meeting_notes.md  test.txt
src/: arrays  arrays.c  arrays.h  delete.c  delete.h  find.c  find.h  main  main.c  main.h  mapToLot  mapToLot.c  map_to_lot.c  map_to_lot.h  menu  menu.c  menu.h  occupancy.c  occupancy.h  optimizer  optimizer.c  parkingLot  parkingLot.c  parking_lot.c  parking_lot.h  save  save.c  save.h  the_john_license.md  types.h
